# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.6 2005/04/15 01:55:40 wolf31o2 Exp $

  15 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/fsscript.sh.example, examples/gamecd.conf.example,
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/snapshot_template.spec, -livecd/files/README.txt,
  -livecd/files/environmental.motd.txt, +livecd/files/livecd.motd.txt,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript/default-runscript.sh:
  Updated all instances of livecd/type: gentoo-release-environmental to
  gentoo-release-livecd, added generic-livecd, and updated all example spec
  files to be more verbose and to include all current options, including
  examples from the 2005.0 x86 release spec files.

  14 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/gamecdfs-update.sh:
  Fixing broken /var/db link and removing bad alsa module.

  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/gamecdfs-update.sh:
  Updated to create a /var/db entry for xorg-x11, required for opengl-update.
  Also make PORTAGE_TMPDIR=/tmp for opengl-update.

  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/pre-kmerge.sh:
  Forcing genkernel to install with proper USE flags, rather than relying on
  us to have the right one in livecd-stage1.

  08 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/gamecd.conf.example, livecd/runscript-support/livecdfs-update.sh:
  Updated livecdfs-update.sh to work properly with hotplug firmwares and also
  updated gamecd.conf.example, since the ut2004demo shell script has been
  renamed to ut2004-demo.

  06 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>