@@ -1,14 +1,14 @@
 #!/usr/bin/python
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.68.2.1 2005/04/15 01:55:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.68.2.2 2005/04/19 21:18:35 wolf31o2 Exp $
 
 # Maintained in full by John Davis <zhen@gentoo.org>
 
 import os,sys,imp,string,getopt
 
 __maintainer__="Chris Gianelloni <wolf31o2@gentoo.org>"
-__version__="1.1.9"
+__version__="1.1.10_pre"
 
 conf_values={}
 
