@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/livecdfs-update.sh,v 1.35.2.3 2005/04/15 01:55:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/livecdfs-update.sh,v 1.35.2.4 2005/04/19 21:18:35 wolf31o2 Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -73,8 +73,24 @@ echo "gentoo" > /etc/dnsdomainname
 #sed -i 's:localhost:livecd.gentoo localhost:' /etc/hosts
 echo "127.0.0.1	livecd.gentoo livecd localhost" > /etc/hosts
 
+# Add any users
+if [ -n "${clst_livecd_users}" ]
+then
+	for x in ${clst_livecd_users}
+	do
+		useradd -G users,wheel,audio,games,cdrom,usb -c "Default LiveCD User" -m $x
+	done
+fi
+
 # setup sudoers
 [ -e /etc/sudoers ] && sed -i '/NOPASSWD: ALL/ s/^# //' /etc/sudoers
+
+# we want the first user to be used when auto-starting X
+if [ -n "${clst_livecd_users}" -a -e /etc/startx ]
+then
+	first_user=$(echo ${clst_livecd_users} | cut -d' ' -f1)
+	sed -i "s/startx/su - $first_user -c startx/" /etc/startx
+fi
 
 # setup dhcp on all detected ethernet devices
 echo "iface_eth0=\"dhcp\""> /etc/conf.d/net
