@@ -1,6 +1,13 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.6 2005/04/15 01:55:40 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.7 2005/04/19 21:18:35 wolf31o2 Exp $
+
+  19 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  livecd/runscript-support/livecdfs-update.sh, modules/grp_target.py,
+  modules/livecd_stage2_target.py:
+  Added livecd/users option to create non-root users. The first user listed
+  will also be used for auto-starting X, if X is merged onto the CD. Fixed bug
+  #89365 with a back-ported patch from catalyst2.
 
   15 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   examples/fsscript.sh.example, examples/gamecd.conf.example,
